--- a/css/resume.css
+++ b/css/resume.css
@@ -40,12 +40,12 @@ h2 {
 }
 
 .list-social-icons a {
-  color: #5DBCD2 !important;
-    }
+  color: #495057;
+}
 
 .list-social-icons a:hover {
-  color: #5DBCD2 !important;
-    }
+  color: #BD5D38;
+}
 
 .list-social-icons a .fa-lg {
   font-size: 1.75rem;
@@ -83,7 +83,7 @@ h2 {
   #sideNav .navbar-brand .img-profile {
     max-width: 10rem;
     max-height: 10rem;
-    border: 0.5rem solid rgba(255, 255, 255, 0.8);
+    border: 0.5rem solid rgba(255, 255, 255, 0.2);
   }
   #sideNav .navbar-collapse {
     display: flex;
@@ -130,8 +130,18 @@ section.resume-section .resume-item .resume-date {
   }
 }
 
+.bg-primary {
+  background-color: #BD5D38 !important;
+}
 
+.text-primary {
+  color: #BD5D38 !important;
+}
+
+a {
+  color: #BD5D38;
+}
 
 a:hover, a:focus, a:active {
-  color: #5DBCD2 !important;
-    }
+  color: #824027;
+}
